--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pg": "^8.18.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "recharts": "^2.15.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
   },
